--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="./styles/site.css">
-    <link rel="icon" type="image/png" href="./images/hacker.png">
+    <link rel="icon" type="image/png" href="./images/hacker.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" href="./images/colored-hacker.png" media="(prefers-color-scheme: dark)">
 </head>
 
 <body>
@@ -16,13 +17,15 @@
         <div>
             <h1 class="header-content">Karma's Calling</h1>
             <h2>We Flip the Script on Scammers</h2>
+            <small id="domain">karmascalling.ca</small>
+
         </div>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li class="mobile"><a href="./aboutus.html">About Us</a></li>
                 <li><a href="./karma.html">Karma</a></li>
-                <li><a href="./resources.html">Resources</a></li>
+                <li><a href="./contactus.html">Contact Us</a></li>
                 <li class="mobile"><a href="./reviews.html">Reviews</a></li>
             </ul>
         </nav>
@@ -31,20 +34,96 @@
         <article>
             <h3>About Karma's Calling</h3>
             <p>
-                Karma's Calling caters to your needs and provides support in claiming what rightfully belongs to you and
-                equips you in the war against fraudsters. We have been privileged to serve a diverse community in the
+                Karma's Calling caters to your needs and provides support in claiming what rightfully belongs to you,
+                and
+                equipping you in the war against fraudsters. We have been privileged to serve a diverse community in the
                 vicinity of Stanford University in Silicon Valley with pride since our inception in 2006.
             </p>
         </article>
         <article>
             <h3>Our Mission</h3>
-            <p>Our mission is to retrieve people's lost valuables because of scams and educate the public with the best
-                possible education for future prevention by means of on-campus and online classes. With over 18 years of
-                experience, we combine expertise with compassion and state-of-the-art strategies to get real results.
+            <p>Our mission is to retrieve people's lost valuables due to scams and educate the public with the best
+                possible resources for future prevention through on-campus and online classes. With over 18 years of
+                experience, we combine expertise with compassion and state-of-the-art strategies to achieve real
+                results.
             </p>
         </article>
 
-        <section class="aboutTable">
+        <section class="mainBorder">
+            <h3>Come Meet Our Wonderful Staff!</h3>
+            <div class="staff">
+                <div class="staffMember">
+                    <img src="./images/Nicolas.png" alt="Photo of the CEO, Nicolas">
+                    <h4>Nicolas, CEO</h4>
+                    <p class="mobile">This is the main main behind the brains of this operation. From his leadership
+                        skills to the
+                        respect he has around the office, he is the top man at Karma's Calling. Nicolas holds the top
+                        rank at the business after a long serving stint since the oppening of Karma's Calling! Talk
+                        about experience, am i right?</p>
+
+
+                </div>
+                <div class="staffMember">
+                    <img src="./images/Noah.png" alt="Photo of the CFO, Noah">
+                    <h4>Noah, CFO</h4>
+                    <p class="mobile"> This is the Man who handles all of our finances. He loves anything and everything
+                        that involves financial assets. Noah is responsibile for handling all payments from our end and
+                        your end to ensure perfect transactions every time. Fun fact, he won the MEWC (Microsoft Excel
+                        World Championship) in 2022! What a true legend of the game.</p>
+
+                </div>
+                <div class="staffMember">
+                    <img src="./images/Phil.png" alt="Photo of the Education Program Director, Phil">
+                    <h4>Phil, Education Program Director</h4>
+                    <p class="mobile">This is the face behind all of our amazing educational classes. Phil can tell
+                        every course taker first hand about the feeling of getting scammed. After a scam that set him
+                        back $100,000, he dedicated his life to ensuring the preaching of his knowledge on fraud
+                        prevention. He will make sure that you understand every concept to the full of his ability. Oh,
+                        and he also adores computers, coincedence? </p>
+
+                </div>
+                <div class="staffMember">
+                    <img src="./images/Arthur.png" alt="Photo of the Cybersecurity Director, Arthur">
+                    <h4>Arthur, Cybersecurity Director</h4>
+                    <p class="mobile">The one and only, Arthur, head of cybersecurity. We need him in top-shape at all
+                        times for maximum security. He ensures that all of our, and, most importantly, your data is kept
+                        safe and secure
+                        at all times. Through his long days of watching CIA videos on youtube, he graduated from Mcgill
+                        University with a masters in cybersecurtity. He truly is his own species.</p>
+
+
+                </div>
+            </div>
+        </section>
+
+
+        <section class="link">
+            <h3>Related links:</h3>
+            <div>
+                <h4>Suppliers:</h4>
+                <ul>
+                    <li><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank">Intel</a></li>
+                    <li><a href="https://www.dell.com/en-ca" target="_blank">Dell</a></li>
+                    <li><a href="https://www.fortinet.com/" target="_blank">Fortinet</a></li>
+                    <li><a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank">Ikea</a></li>
+                    <li><a href="https://www.smarttech.com/education/products/interactive-displays"
+                            target="_blank">SMART</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Our Sponsors:</h4>
+                <ul>
+                    <li><a href="https://www.americanexpress.com/en-ca/" target="_blank">AMEX</a></li>
+                    <li><a href="https://www.mcafee.com/en-ca/index.html" target="_blank">McAfee</a></li>
+
+                </ul>
+
+            </div>
+
+
+        </section>
+
+        <section class="table">
             <h3>Come see us during these hours!</h3>
             <table>
                 <caption>Business Hours</caption>
@@ -103,7 +182,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./aboutus.html">About Us</a></li>
                     <li><a href="./karma.html">Karma</a></li>
-                    <li><a href="./resources.html">Resources</a></li>
+                    <li><a href="./contactus.html">Contact Us</a></li>
                     <li><a href="./reviews.html">Reviews</a></li>
                 </ul>
             </nav>
@@ -111,10 +190,19 @@
             <small>
                 <a href="https://www.flaticon.com/free-icons/cyber-attack" title="cyber attack icons" class="tag">Cyber
                     attack icons
-                    created by Andrean Prabowo - Flaticon</a><br>
-                <a href="https://deepai.org/machine-learning-model/text2img" title="Website's images" class="tag">AI
-                    Images</a><br>
-
+                    created by Andrean Prabowo - Flaticon</a>
+                <br>
+                Office Image by <a
+                    href="https://pixabay.com/users/mwitt1337-889520/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Author" class="tag">Malachi
+                    Witt</a> from <a
+                    href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Office photo" class="tag">Pixabay</a><br>
+                <a href="https://www.pexels.com/photo/successful-negotiate-and-handshake-concept-two-businessman-shake-hand-with-partner-to-celebration-partnership-and-teamwork-business-deal-12885861/"
+                    title="Handshake" class="tag">Handshake Photo by Khwanchai Phanthong</a><br>
+                <a href="https://www.pexels.com/photo/teacher-giving-the-test-result-to-his-student-7092347/"
+                    title="Classroom photo" class="tag"> Classroom Photo by RDNE Stock project</a><br>
+                Video by Karim Almalakeh<br><br>
                 Karma's Calling&trade;
                 All rights reserved
             </small>
