--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./styles/site.css">
-    <link rel="icon" type="image/png" href="./images/hacker.png">
+    <link rel="icon" type="image/png" href="./images/hacker.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" href="./images/colored-hacker.png" media="(prefers-color-scheme: dark)">
+
+
 </head>
 
 <body>
@@ -15,54 +18,56 @@
         <div>
             <h1>Karma's Calling</h1>
             <h2>We Flip the Script on Scammers</h2>
+            <small id="domain">karmascalling.ca</small>
         </div>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li class="mobile"><a href="./aboutus.html">About Us</a></li>
                 <li><a href="./karma.html">Karma</a></li>
-                <li><a href="./resources.html">Resources</a></li>
+                <li><a href="./contactus.html">Contact Us</a></li>
                 <li class="mobile"><a href="./reviews.html">Reviews</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="mainBorder card">
-            <img src="./images/Karma's_Calling_Office.jpeg" alt="The company's office">
+        <section class="mainBorder">
+            <img src="./images/Office.jpg" alt="The company's office">
             <div>
-                <h3>Turning The Tide In Your Favor</h3>
-                <p>Karma's Calling provides services to turn the tables on scammers. Located in the heart of the Silicon
+                <h3 class="neonText">Turning the Tide In Your Favor</h3>
+                <p>Karma's Calling provides services to turn the tables on scammers. Located in the heart of Silicon
                     Valley,
                     just 15 minutes away from Stanford University,
                     we have played a groundbreaking role in countering scams. Since 2006, it has been our mission to be
-                    able to
-                    uplift the spirits of our clients by reclaiming any lost funds while providing educational services
-                    to prevent this situation from reoccuring in the future.</p>
+                    able to uplift the spirits of our clients by reclaiming any lost funds while providing educational
+                    services
+                    to prevent this situation from recurring in the future.</p>
             </div>
         </section>
 
-        <section class="mainBorder">
-
-            <img src="./images/Handshake_With_Representitive_And_Client.jpeg" alt="A handshake between a representative and a client" id="img2">
+        <section class="welcome mainBorder">
+            <img src="./images/Handshake.jpg" alt="A handshake between a representative and a client" id="img2">
             <div>
-                <h3>Our Values</h3>
-                <p>Our clients are at the heart of everything we do. We know what agony it is and how frustrating it is
-                    to become a victim.
-                    So, we're turning that tide around in your favor at Karma's Calling. Our dedicated team works
-                    tirelessly to retrieve lost valuables;
-                    likewise, we do classes to empower you with the knowledge to protect yourself from future scams. We
-                    do not just offer a service;
-                    we offer ourselves as trusted allies along your path to justice and security.</p>
+                <h3 class="neonText">Welcome To Karma's Calling!</h3>
+                <p id="welcome">
+                    Here at Karma's Calling, we welcome you into our family. From our <a href="./karma.html">competitive
+                        prices</a> to our committed and highly <a href="./aboutus.html">qualified staff</a>, we are
+                    always here for you in the fight
+                    against fraud. Our <a href="./aboutus.html">accommodating hours</a>
+                    provide easily accesible time frames for all availibilities no matter the day. You can read first
+                    hand what some of our <a href="./reviews.html">happy customers</a> think about our services. For any
+                    further inquiries, please feel free to fill out our <a href="./resources.html">form</a>. We also
+                    provide <a href="./aboutus.html">links</a> to other websites of intrest to you and us!
+                </p>
             </div>
-
         </section>
         <section class="mainBorder">
-            <img src="./images/Scam_Prevention_Classroom.jpeg" alt="A classroom about scam prevention tactics">
+            <img src="./images/Classroom.jpg" alt="A classroom about scam prevention tactics">
 
             <div>
-                <h3>Empowering You with Knowledge and Confidence</h3>
+                <h3 class="neonText">Empowering You through Knowledge and Confidence</h3>
                 <p>Knowledge is power. We believe that it takes the right kind of tools and knowledge to empower you,
-                    being the first step in preventing future scams.
+                    which is the first step in preventing future scams.
                     Our comprehensive classes are informative, equipping, and empowering in a manner intended to
                     confidently protect you and your loved ones against potential threats.</p>
             </div>
@@ -80,7 +85,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./aboutus.html">About Us</a></li>
                     <li><a href="./karma.html">Karma</a></li>
-                    <li><a href="./resources.html">Resources</a></li>
+                    <li><a href="./contactus.html">Contact Us</a></li>
                     <li><a href="./reviews.html">Reviews</a></li>
                 </ul>
             </nav>
@@ -90,13 +95,23 @@
                     attack icons
                     created by Andrean Prabowo - Flaticon</a>
                 <br>
-                <a href="https://deepai.org/machine-learning-model/text2img" title="Website's images" class="tag">AI
-                    Images</a><br>
+                Office Image by <a
+                    href="https://pixabay.com/users/mwitt1337-889520/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Author" class="tag">Malachi
+                    Witt</a> from <a
+                    href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Office photo" class="tag">Pixabay</a><br>
+                <a href="https://www.pexels.com/photo/successful-negotiate-and-handshake-concept-two-businessman-shake-hand-with-partner-to-celebration-partnership-and-teamwork-business-deal-12885861/"
+                    title="Handshake" class="tag">Handshake Photo by Khwanchai Phanthong</a><br>
+                <a href="https://www.pexels.com/photo/teacher-giving-the-test-result-to-his-student-7092347/"
+                    title="Classroom photo" class="tag"> Classroom Photo by RDNE Stock project</a><br>
+                Video by Karim Almalakeh<br><br>
                 Karma's Calling&trade;
                 All rights reserved
             </small>
         </footer>
     </div>
 </body>
+
 
 </html>
