--- a/karma.html
+++ b/karma.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karma</title>
     <link rel="stylesheet" href="./styles/site.css">
-    <link rel="icon" type="image/png" href="./images/hacker.png">
+    <link rel="icon" type="image/png" href="./images/hacker.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" href="./images/colored-hacker.png" media="(prefers-color-scheme: dark)">
 </head>
 
 <body>
@@ -16,13 +17,15 @@
         <div>
             <h1 class="header-content">Karma's Calling</h1>
             <h2>We Flip the Script on Scammers</h2>
+            <small id="domain">karmascalling.ca</small>
+
         </div>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li class="mobile"><a href="./aboutus.html">About Us</a></li>
                 <li><a href="./karma.html">Karma</a></li>
-                <li><a href="./resources.html">Resources</a></li>
+                <li><a href="./contactus.html">Contact Us</a></li>
                 <li class="mobile"><a href="./reviews.html">Reviews</a></li>
             </ul>
         </nav>
@@ -30,9 +33,9 @@
     <main>
         <h3>Offered Services</h3>
 
-        <section class="aboutTable">
-            <h4>Here you can find a simple list of our provided services. For any fraudulent scams that you may have
-                encountered, we have a solution for.</h4>
+        <section class="table">
+            <h3>Here you can find a simple list of our provided services. For any fraudulent scams that you may have
+                encountered, we have a solution for.</h3>
             <table id="scamTable">
                 <caption>Retrieve your lost valuables!</caption>
                 <tr>
@@ -75,8 +78,8 @@
 
         </section>
 
-        <section class="aboutTable">
-            <h4>Find the course that fits you the best. All courses are available in-person or online.</h4>
+        <section class="table">
+            <h3>Find the course that fits you the best. All courses are available in-person or online.</h3>
             <table id="classTable">
                 <caption>Come Learn with Us!</caption>
                 <tr>
@@ -119,7 +122,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./aboutus.html">About Us</a></li>
                     <li><a href="./karma.html">Karma</a></li>
-                    <li><a href="./resources.html">Resources</a></li>
+                    <li><a href="./contactus.html">Contact Us</a></li>
                     <li><a href="./reviews.html">Reviews</a></li>
                 </ul>
             </nav>
@@ -129,8 +132,17 @@
                     attack icons
                     created by Andrean Prabowo - Flaticon</a>
                 <br>
-                <a href="https://deepai.org/machine-learning-model/text2img" title="Website's images" class="tag">AI
-                    Images</a><br>
+                Office Image by <a
+                    href="https://pixabay.com/users/mwitt1337-889520/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Author" class="tag">Malachi
+                    Witt</a> from <a
+                    href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Office photo" class="tag">Pixabay</a><br>
+                <a href="https://www.pexels.com/photo/successful-negotiate-and-handshake-concept-two-businessman-shake-hand-with-partner-to-celebration-partnership-and-teamwork-business-deal-12885861/"
+                    title="Handshake" class="tag">Handshake Photo by Khwanchai Phanthong</a><br>
+                <a href="https://www.pexels.com/photo/teacher-giving-the-test-result-to-his-student-7092347/"
+                    title="Classroom photo" class="tag"> Classroom Photo by RDNE Stock project</a><br>
+                Video by Karim Almalakeh<br><br>
                 Karma's Calling&trade;
                 All rights reserved
             </small>
