--- a/reviews.html
+++ b/reviews.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Reviews</title>
     <link rel="stylesheet" href="./styles/site.css">
-    <link rel="icon" type="image/png" href="./images/hacker.png">
+    <link rel="icon" type="image/png" href="./images/hacker.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" href="./images/colored-hacker.png" media="(prefers-color-scheme: dark)">
 </head>
 
 <body>
@@ -15,19 +16,58 @@
         <div>
             <h1>Karma's Calling</h1>
             <h2>We Flip the Script on Scammers</h2>
+            <small id="domain">karmascalling.ca</small>
         </div>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li class="mobile"><a href="./aboutus.html">About Us</a></li>
                 <li><a href="./karma.html">Karma</a></li>
-                <li><a href="./resources.html">Resources</a></li>
+                <li><a href="./contactus.html">Contact Us</a></li>
                 <li class="mobile"><a href="./reviews.html">Reviews</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <p>Loading...</p>
+        <section class="reviewContainer">
+            <h3>What Our Real Customers Have to Say!</h3>
+            <div class="reviewFlex">
+                <div class="review">
+                    <p>Karma's Calling is <strong>THE</strong> master of scam retrieval and prevention. If you need help
+                        with any scam
+                        you've encountered
+                        or you want to learn how to prevent falling for these fraudsters, the team here is your best
+                        choice for
+                        the job. They really do have incredible reliability and customer service!
+                    </p>
+                    <p class="customer">Tiger W., San Jose, CA</p>
+                </div>
+                <div class="review neonBox">
+                    <p>
+                        Their educational classes on scam prevention are filled to the brim with information, and their
+                        teachers are former Stanford professors! I have learned <strong>SO</strong> much here, and I
+                        would recommend it to
+                        anyone willing to stay safe!
+                    </p>
+                    <p class="customer">Reese W., Sunnyvale, CA</p>
+                </div>
+            </div>
+        </section>
+
+        <h3>Discover How Our Clients Made a Difference With Us!</h3>
+
+
+        <div class="video">
+            <video controls>
+                <source src="./media/Karmas-Calling-Video.mp4" type="video/mp4">
+                <source src="./media/Karmas-Calling-Video.webm" type="video/webm">
+                <source src="./media/Karmas-Calling-Video.ogv" type="video/ogg">
+                Your browser does not support the video tag
+            </video>
+        </div>
+        <small id="video">*.mp4 file/5.7mb</small>
+
+
     </main>
 
     <div id="foot">
@@ -37,7 +77,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./aboutus.html">About Us</a></li>
                     <li><a href="./karma.html">Karma</a></li>
-                    <li><a href="./resources.html">Resources</a></li>
+                    <li><a href="./contactus.html">Contact Us</a></li>
                     <li><a href="./reviews.html">Reviews</a></li>
                 </ul>
             </nav>
@@ -47,8 +87,17 @@
                     attack icons
                     created by Andrean Prabowo - Flaticon</a>
                 <br>
-                <a href="https://deepai.org/machine-learning-model/text2img" title="Website's images" class="tag">AI
-                    Images</a><br>
+                Office Image by <a
+                    href="https://pixabay.com/users/mwitt1337-889520/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Author" class="tag">Malachi
+                    Witt</a> from <a
+                    href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2284501"
+                    title="Office photo" class="tag">Pixabay</a><br>
+                <a href="https://www.pexels.com/photo/successful-negotiate-and-handshake-concept-two-businessman-shake-hand-with-partner-to-celebration-partnership-and-teamwork-business-deal-12885861/"
+                    title="Handshake" class="tag">Handshake Photo by Khwanchai Phanthong</a><br>
+                <a href="https://www.pexels.com/photo/teacher-giving-the-test-result-to-his-student-7092347/"
+                    title="Classroom photo" class="tag"> Classroom Photo by RDNE Stock project</a><br>
+                Video by Karim Almalakeh<br><br>
                 Karma's Calling&trade;
                 All rights reserved
             </small>
